# mediapipe_facemesh_pi

./: .gitignore  CMakeLists.txt  README.md  setup.sh
cmake/: FindTFLite.cmake
models/: FaceDetectionConfig.json  FaceLandmarkConfig.json  face_config.json
src/: CommonDefines.h  ConfigManager.cpp  ConfigManager.h  FaceDetection.cpp  FaceDetection.h  FaceLandmarks.cpp  FaceLandmarks.h  FaceManager.cpp  FaceManager.h  TFliteModel.cpp  TFliteModel.h  TfLiteModel.cpp  TfLiteModel.h  common_defines.h  config_manager.cpp  config_manager.h  face_detection.cpp  face_detection.h  face_landmarks.cpp  face_landmarks.h  face_manager.cpp  face_manager.h  main.cpp  tflite_model.cpp  tflite_model.h
